// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Features /> should render with de translations 1`] = `
<React.Fragment>
  <Title
    as="h2"
  >
    Features
  </Title>
  <Lead>
    Crafted for 
    <strong>
      highly scalable
    </strong>
    ,
     
    <strong>
      easily maintainable
    </strong>
     and
     
    <strong>
      highly performant
    </strong>
     React.js applications with a focus on
     
    <strong>
      best DX
    </strong>
     and 
    <strong>
      best practices
    </strong>
    .
  </Lead>
  <Features__List>
    <Features__Feature>
      <ForwardRef(SvgState)
        className="feature-icon"
      />
      <Features__Content>
        <SubTitle>
          Predictable State
        </SubTitle>
        <P>
          Build easy to test and debug, flexible and extensible applications using
           
          <A
            href="https://redux.js.org/basics/usage-with-react"
            rel="noopener noreferrer"
            target="_blank"
          >
            Redux
          </A>
          . Unidirectional data flow allows for change logging and time travel debugging.
           
          <A
            href="https://github.com/zalmoxisus/redux-devtools-extension"
            rel="noopener noreferrer"
            target="_blank"
          >
            Install Chrome Redux Dev Tools
          </A>
           
          to see how your application's state changes and travel in time to debug. Type any github username below and see it in action with Redux Dev Tools.
        </P>
        <GithubRepoForm />
      </Features__Content>
    </Features__Feature>
    <Features__Feature>
      <ForwardRef(SvgCss)
        className="feature-icon"
      />
      <Features__Content>
        <SubTitle>
          Next Generation CSS
        </SubTitle>
        <P>
          Write composable CSS that’s co-located with your components for complete modularity. Ship only the styles that are on the page for the best performance. Generate application-wide styles and themes for your components. Change the theme below to see how easy and intuitive theming can ever be!
        </P>
        <ThemeSwitch />
      </Features__Content>
    </Features__Feature>
    <Features__Feature>
      <ForwardRef(SvgIntl)
        className="feature-icon"
      />
      <Features__Content>
        <SubTitle>
          i18n Internationalisierung und Pluralisierung
           
        </SubTitle>
        <P>
          Das Internet ist global. Mehrsprachige- und Pluralisierungsunterstützung ist entscheidend für große Web-Anwendungen. Sie können die Sprache unten verändern, ohne die Seite aktualisieren zu müssen.
          <br />
          <small>
            (Only some of the features below are translated to demonstrate an example)
          </small>
        </P>
        <LanguageSwitch />
      </Features__Content>
    </Features__Feature>
    <Features__Feature>
      <ForwardRef(SvgRoute)
        className="feature-icon"
      />
      <Features__Content>
        <SubTitle>
          Standard Routing
        </SubTitle>
        <P>
          Routing macht es möglich Seiten (z.B. '/about') Ihrer Anwendung hinzuzufügen.
          <br />
          <small>
            Go to our
             
            <Link
              to="/notfound"
            >
              /NotFound
            </Link>
             
            page to see how routing works
          </small>
        </P>
      </Features__Content>
    </Features__Feature>
    <Features__Feature>
      <ForwardRef(SvgInstantFeedback)
        className="feature-icon"
      />
      <Features__Content>
        <SubTitle>
          Sofortiges Feedback
        </SubTitle>
        <P>
          Genießen Sie die beste Entwicklungserfahrung und programmieren Sie Ihre App so schnell wie noch nie! Ihre Änderungen an dem CSS und JavaScript sind sofort reflektiert, ohne die Seite aktualisieren zu müssen.
        </P>
      </Features__Content>
    </Features__Feature>
    <Features__Feature>
      <ForwardRef(SvgScaffolding)
        className="feature-icon"
      />
      <Features__Content>
        <SubTitle>
          Schnelles Scaffolding
        </SubTitle>
        <P>
          Automatisieren Sie die Kreation von Komponenten, Containern, Routen, Selektoren und Sagas – und ihre Tests – direkt von dem Terminal!
        </P>
      </Features__Content>
    </Features__Feature>
    <Features__Feature>
      <ForwardRef(SvgSeo)
        className="feature-icon"
      />
      <Features__Content>
        <SubTitle>
          SEO
        </SubTitle>
        <P>
          Supports SEO (document head tags management) for search engines that support indexing of JavaScript content.
        </P>
      </Features__Content>
    </Features__Feature>
    <Features__Feature>
      <ForwardRef(SvgTs)
        className="feature-icon"
      />
      <Features__Content>
        <SubTitle>
          TypeScript
        </SubTitle>
        <P>
          Typescript is the key to scalability. Build self-documented code, easy-to-debug code and create maintainable large applications and codebases with a highly productive development experience.
        </P>
      </Features__Content>
    </Features__Feature>
    <Features__Feature>
      <ForwardRef(SvgCodeAnalysis)
        className="feature-icon"
      />
      <Features__Content>
        <SubTitle>
          Static Code Analysis
        </SubTitle>
        <P>
          Focus on writing new features without worrying about formatting or code quality. With the right editor setup, your code will automatically be formatted and linted as you work.
        </P>
      </Features__Content>
    </Features__Feature>
  </Features__List>
</React.Fragment>
`;

exports[`<Features /> should render with en translations 1`] = `
<React.Fragment>
  <styled.h1
    as="h2"
  >
    Features
  </styled.h1>
  <styled.p>
    Crafted for 
    <strong>
      highly scalable
    </strong>
    ,
     
    <strong>
      easily maintainable
    </strong>
     and
     
    <strong>
      highly performant
    </strong>
     React.js applications with a focus on
     
    <strong>
      best DX
    </strong>
     and 
    <strong>
      best practices
    </strong>
    .
  </styled.p>
  <styled.ul>
    <styled.li>
      <ForwardRef(SvgState)
        className="feature-icon"
      />
      <styled.div>
        <styled.h3>
          Predictable State
        </styled.h3>
        <styled.p>
          Build easy to test and debug, flexible and extensible applications using
           
          <styled.a
            href="https://redux.js.org/basics/usage-with-react"
            rel="noopener noreferrer"
            target="_blank"
          >
            Redux
          </styled.a>
          . Unidirectional data flow allows for change logging and time travel debugging.
           
          <styled.a
            href="https://github.com/zalmoxisus/redux-devtools-extension"
            rel="noopener noreferrer"
            target="_blank"
          >
            Install Chrome Redux Dev Tools
          </styled.a>
           
          to see how your application's state changes and travel in time to debug. Type any github username below and see it in action with Redux Dev Tools.
        </styled.p>
        <GithubRepoForm />
      </styled.div>
    </styled.li>
    <styled.li>
      <ForwardRef(SvgCss)
        className="feature-icon"
      />
      <styled.div>
        <styled.h3>
          Next Generation CSS
        </styled.h3>
        <styled.p>
          Write composable CSS that’s co-located with your components for complete modularity. Ship only the styles that are on the page for the best performance. Generate application-wide styles and themes for your components. Change the theme below to see how easy and intuitive theming can ever be!
        </styled.p>
        <ThemeSwitch />
      </styled.div>
    </styled.li>
    <styled.li>
      <ForwardRef(SvgIntl)
        className="feature-icon"
      />
      <styled.div>
        <styled.h3>
          i18n Internationalization & Pluralization
           
        </styled.h3>
        <styled.p>
          Scalable apps need to support multiple languages, easily add and support multiple languages. Change the language below to see how instantly it updates the page without refreshing.
          <br />
          <small>
            (Only some of the features below are translated to demonstrate an example)
          </small>
        </styled.p>
        <LanguageSwitch />
      </styled.div>
    </styled.li>
    <styled.li>
      <ForwardRef(SvgRoute)
        className="feature-icon"
      />
      <styled.div>
        <styled.h3>
          Industry-standard Routing
        </styled.h3>
        <styled.p>
          It's natural to want to add pages (e.g. \`/about\`) to your application, and routing makes this possible.
          <br />
          <small>
            Go to our
             
            <Styled(Link)
              to="/notfound"
            >
              /NotFound
            </Styled(Link)>
             
            page to see how routing works
          </small>
        </styled.p>
      </styled.div>
    </styled.li>
    <styled.li>
      <ForwardRef(SvgInstantFeedback)
        className="feature-icon"
      />
      <styled.div>
        <styled.h3>
          Instant Feedback
        </styled.h3>
        <styled.p>
          Enjoy the best DX and code your app at the speed of thought! Your saved changes to the CSS and JS are reflected instantaneously without refreshing the page.
        </styled.p>
      </styled.div>
    </styled.li>
    <styled.li>
      <ForwardRef(SvgScaffolding)
        className="feature-icon"
      />
      <styled.div>
        <styled.h3>
          Quick Scaffolding
        </styled.h3>
        <styled.p>
          Automate the creation of components, features, routes, selectors and sagas - and their tests - right from the CLI! Avoid fighting the glue of your code and focus on your app!
        </styled.p>
      </styled.div>
    </styled.li>
    <styled.li>
      <ForwardRef(SvgSeo)
        className="feature-icon"
      />
      <styled.div>
        <styled.h3>
          SEO
        </styled.h3>
        <styled.p>
          Supports SEO (document head tags management) for search engines that support indexing of JavaScript content.
        </styled.p>
      </styled.div>
    </styled.li>
    <styled.li>
      <ForwardRef(SvgTs)
        className="feature-icon"
      />
      <styled.div>
        <styled.h3>
          TypeScript
        </styled.h3>
        <styled.p>
          Typescript is the key to scalability. Build self-documented code, easy-to-debug code and create maintainable large applications and codebases with a highly productive development experience.
        </styled.p>
      </styled.div>
    </styled.li>
    <styled.li>
      <ForwardRef(SvgCodeAnalysis)
        className="feature-icon"
      />
      <styled.div>
        <styled.h3>
          Static Code Analysis
        </styled.h3>
        <styled.p>
          Focus on writing new features without worrying about formatting or code quality. With the right editor setup, your code will automatically be formatted and linted as you work.
        </styled.p>
      </styled.div>
    </styled.li>
  </styled.ul>
</React.Fragment>
`;
